force-app/main/default/objects/APTS_Integration_Repository__c/APTS_Integration_Repository__c.object-meta.xml
<CustomObject>
    <description>Holds master data (like source system, target system, class name, etc..) for each integration</description>
    <label>Integration Repository</label>
    <nameField>
        <label>Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Repository</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>