force-app/main/default/objects/APTS_Integration_Repository__c/fields/APTS_Body_Implementation_Class__c.field-meta.xml
<CustomField>
    <fullName>APTS_Body_Implementation_Class__c</fullName>
    <label>Body Implementation Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>