force-app/main/default/objects/APTS_Integration_Repository__c/fields/APTS_Brief_Description__c.field-meta.xml
<CustomField>
    <fullName>APTS_Brief_Description__c</fullName>
    <description>Brief description about this integration.</description>
    <inlineHelpText>Brief description about this integration.</inlineHelpText>
    <label>Brief Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>