force-app/main/default/objects/APTS_Integration_Repository__c/fields/APTS_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>APTS_Endpoint__c</fullName>
    <description>Location (URI) of webservice</description>
    <label>Endpoint</label>
    <length>150</length>
    <type>Text</type>
</CustomField>