force-app/main/default/objects/APTS_Integration_Repository__c/fields/APTS_Implementation_Class__c.field-meta.xml
<CustomField>
    <fullName>APTS_Implementation_Class__c</fullName>
    <description>Class involved during integration</description>
    <label>Implementation Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>