force-app/main/default/objects/APTS_Integration_Repository__c/fields/APTS_isActive__c.field-meta.xml
<CustomField>
    <fullName>APTS_isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag used to indicate if an integration is active or disabled</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>