force-app/main/default/objects/APTS_Integration_Repository__c/fields/APTS_Log_Messages__c.field-meta.xml
<CustomField>
    <fullName>APTS_Log_Messages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Messages</label>
    <type>Checkbox</type>
</CustomField>