force-app/main/default/objects/APTS_Integration_Repository__c/fields/APTS_Logs_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>APTS_Logs_Retention_Days__c</fullName>
    <description>No of days to persist transaction logs</description>
    <inlineHelpText>No of days to persist transaction logs</inlineHelpText>
    <label>Logs Retention Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>