force-app/main/default/objects/APTS_Integration_Repository__c/fields/APTS_No_of_Retries__c.field-meta.xml
<CustomField>
    <fullName>APTS_No_of_Retries__c</fullName>
    <description>No. of times a transaction be attempted after receiving error as a result of webservice callout</description>
    <label>No. of Retries</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>