force-app/main/default/objects/APTS_Integration_Repository__c/fields/APTS_Notify_User__c.field-meta.xml
<CustomField>
    <fullName>APTS_Notify_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should users be notified if errors are encountered</description>
    <label>Notify User</label>
    <type>Checkbox</type>
</CustomField>