force-app/main/default/objects/APTS_Integration_Repository__c/fields/APTS_Operation_Name__c.field-meta.xml
<CustomField>
    <fullName>APTS_Operation_Name__c</fullName>
    <description>Unique identifier to indicate operation carried out by user</description>
    <label>Operation Name</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>