force-app/main/default/objects/APTS_Integration_Repository__c/fields/APTS_Retry_Interval__c.field-meta.xml
<CustomField>
    <fullName>APTS_Retry_Interval__c</fullName>
    <description>Attempt to make call out (in case of failure) after an interval indicated by Retry Interval</description>
    <label>Retry Interval</label>
    <length>30</length>
    <type>Text</type>
</CustomField>