force-app/main/default/objects/APTS_Integration_Repository__c/fields/APTS_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>APTS_Service_Type__c</fullName>
    <description>Indicates web service type.</description>
    <inlineHelpText>Specify whether web service type is REST or SOAP.</inlineHelpText>
    <label>Service Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REST</fullName>
                <default>true</default>
                <label>REST</label>
            </value>
            <value>
                <fullName>SOAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>