force-app/main/default/objects/APTS_Integration_Repository__c/fields/APTS_Source_System__c.field-meta.xml
<CustomField>
    <fullName>APTS_Source_System__c</fullName>
    <description>Source (Request Sender) System</description>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APTTUS</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>