force-app/main/default/objects/APTS_Integration_Repository__c/fields/APTS_Target_System__c.field-meta.xml
<CustomField>
    <fullName>APTS_Target_System__c</fullName>
    <description>Target System (Request Receiver)</description>
    <label>Target System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APTTUS</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>