force-app/main/default/objects/APTS_Integration_Repository__c/fields/APTS_Users_to_be_notified__c.field-meta.xml
<CustomField>
    <fullName>APTS_Users_to_be_notified__c</fullName>
    <description>List all user&apos;s to be notified if an error is encountered</description>
    <label>Users to be notified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>