force-app/main/default/objects/APTS_Integration_Repository__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>APTS_Operation_Name__c</columns>
    <columns>APTS_Source_System__c</columns>
    <columns>APTS_Target_System__c</columns>
    <columns>APTS_Endpoint__c</columns>
    <columns>APTS_Brief_Description__c</columns>
    <columns>APTS_Implementation_Class__c</columns>
    <columns>APTS_isActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>